<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navaid_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for the NavAid project.</description>
  <maintainer email="marcus.j.hsieh@gmail.com">jetson</maintainer>
  <license>Apache-2.0</license> <!-- Or your preferred license -->

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- This is an ament_cmake package -->

  <!-- Dependencies for message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> <!-- Very Important -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type> <!-- This is an ament_cmake package -->
  </export>
</package>